--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ $(document).ready(function(){
 
       // 서버에 이미지 업로드
       $.ajax({
-        url: '/upload',
+        url: 'https://romantic-myrta-voiceguide-7abbd95a.koyeb.app/upload',
         type: 'POST',
         data: formData,
         processData: false,
